tests/paczka1/small_fuzzy/91365204.err
Error in line 2: A81 S88* 0,*
Error in line 1: jAAVc S292 40,3
